# mywebapp

./: Dockerfile  LICENSE  main.py  pyproject.toml  requirements.txt  run.py  setup.py
storage/: data.json
templates/: base.html  error.html  index.html  message.html
